unpackaged/main/default/objects/Case/fields/Training_completed__c.field-meta.xml
<CustomField>
    <fullName>Training_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008663 - Enhancements to enable Data Load privileges to non-Hive team members</description>
    <label>Training completed?</label>
    <type>Checkbox</type>
</CustomField>