unpackaged/main/default/objects/Case/fields/Training_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Training_completion_date__c</fullName>
    <description>US-0008663 - Enhancements to enable Data Load privileges to non-Hive team members</description>
    <label>Training completion date</label>
    <type>Date</type>
</CustomField>