unpackaged/main/default/objects/Case/fields/UAT_tests_passed__c.field-meta.xml
<CustomField>
    <fullName>UAT_tests_passed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008663 - Enhancements to enable Data Load privileges to non-Hive team members</description>
    <inlineHelpText>Check this box to confirm that data has been uploaded to UAT successfully prior to production upload attempt</inlineHelpText>
    <label>UAT tests passed</label>
    <type>Checkbox</type>
</CustomField>