unpackaged/main/default/objects/Case/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>US-0009366 - [Export Reports] - Manage PII access within Hive in a SOX compliant manner.
alternative id for Site acceptance (PII contract)
auto  populated by trigger.</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto populated UID.</inlineHelpText>
    <label>Unique Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>