unpackaged/main/default/objects/Case/fields/User_Already_Exist__c.field-meta.xml
<CustomField>
    <fullName>User_Already_Exist__c</fullName>
    <formula>if(not(isblank(Existing_User__c)), IMAGE(&#39;/resource/1590669479000/alarm?&#39;,  Existing_User__c ) ,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Already Exist</label>
    <type>Text</type>
</CustomField>