unpackaged/main/default/objects/Case/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GCX Portal User</fullName>
            </value>
            <value>
                <fullName>Full License User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>