unpackaged/main/default/objects/Case/fields/Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>Validation_Result__c</fullName>
    <formula>IMAGE(if(isblank(Ardira_Survey_Validation_Result__c),&#39;/resource/Ardira_Surveys_Icons/TRUE.png&#39;,&#39;/resource/Ardira_Surveys_Icons/FALSE.png&#39;), Ardira_Survey_Validation_Result__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validation Result</label>
    <type>Text</type>
</CustomField>