unpackaged/main/default/objects/Case/fields/Who_should_have_admin_access__c.field-meta.xml
<CustomField>
    <fullName>Who_should_have_admin_access__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008663 - Enhancements to enable Data Load privileges to non-Hive team members</description>
    <inlineHelpText>Add the user who should receive admin privileges</inlineHelpText>
    <label>Who should have admin access?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets8</relationshipName>
    <type>Lookup</type>
</CustomField>