unpackaged/main/default/objects/Case/recordTypes/Admin_Request.recordType-meta.xml
<RecordType>
    <fullName>Admin_Request</fullName>
    <active>true</active>
    <businessProcess>Access Request</businessProcess>
    <description>Request access to Export Reports</description>
    <label>Special Permission Request</label>
</RecordType>