unpackaged/main/default/objects/Case/recordTypes/Contact_Removal_Form.recordType-meta.xml
<RecordType>
    <fullName>Contact_Removal_Form</fullName>
    <active>true</active>
    <businessProcess>Contact Removal Form</businessProcess>
    <label>Contact Removal Form</label>
</RecordType>