unpackaged/main/default/objects/Case/recordTypes/Data_Load.recordType-meta.xml
<RecordType>
    <fullName>Data_Load</fullName>
    <active>true</active>
    <businessProcess>Support Ticket</businessProcess>
    <description>Log data load requests to be actioned in Hive</description>
    <label>Data Load</label>
</RecordType>