unpackaged/main/default/objects/Case/recordTypes/ebay_NA_Daily_Deals.recordType-meta.xml
<RecordType>
    <fullName>ebay_NA_Daily_Deals</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>ebay NA Daily Deals</label>
</RecordType>