unpackaged/main/default/objects/Case/recordTypes/eBay_NA_Integration_Request.recordType-meta.xml
<RecordType>
    <fullName>eBay_NA_Integration_Request</fullName>
    <active>true</active>
    <businessProcess>eBay NA Integration Request</businessProcess>
    <label>eBay NA Integration Request</label>
</RecordType>