unpackaged/main/default/objects/Case/recordTypes/Seller_Portal_Deactivation.recordType-meta.xml
<RecordType>
    <fullName>Seller_Portal_Deactivation</fullName>
    <active>true</active>
    <businessProcess>User Deactivation</businessProcess>
    <description>Created by system from Seller Portal - (Link Account)</description>
    <label>Seller Portal Deactivation</label>
</RecordType>