unpackaged/main/default/objects/Case/recordTypes/Support_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Support_Ticket</fullName>
    <active>true</active>
    <businessProcess>Support Ticket</businessProcess>
    <label>Support Ticket</label>
</RecordType>