unpackaged/main/default/objects/Case/recordTypes/User_Deactivation.recordType-meta.xml
<RecordType>
    <fullName>User_Deactivation</fullName>
    <active>true</active>
    <businessProcess>User Deactivation</businessProcess>
    <label>User Deactivation</label>
</RecordType>