unpackaged/main/default/objects/Case/recordTypes/User_Reactivation.recordType-meta.xml
<RecordType>
    <fullName>User_Reactivation</fullName>
    <active>true</active>
    <businessProcess>User Reactivation</businessProcess>
    <label>User Reactivation</label>
</RecordType>