unpackaged/main/default/objects/Case/recordTypes/User_Request_Form.recordType-meta.xml
<RecordType>
    <fullName>User_Request_Form</fullName>
    <active>true</active>
    <businessProcess>User Request Form</businessProcess>
    <label>User Request Form</label>
</RecordType>