unpackaged/main/default/objects/Case/recordTypes/Validate_Survey.recordType-meta.xml
<RecordType>
    <fullName>Validate_Survey</fullName>
    <active>true</active>
    <businessProcess>Validate Survey</businessProcess>
    <label>Validate Survey</label>
</RecordType>