unpackaged/main/default/objects/Case/validationRules/Blank_spaces_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_spaces_not_allowed</fullName>
    <active>true</active>
    <description>0009219</description>
    <errorConditionFormula>CONTAINS( eBay_Corp_ID__c , &quot; &quot;)</errorConditionFormula>
    <errorDisplayField>eBay_Corp_ID__c</errorDisplayField>
    <errorMessage>eBay Corp Id Cannot contain blank spaces</errorMessage>
</ValidationRule>