unpackaged/main/default/objects/Case/validationRules/Prevent_closing_financial_impact_tickets.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_closing_financial_impact_tickets</fullName>
    <active>true</active>
    <description>US-0011344</description>
    <errorConditionFormula>AND( Financial_Impact__c ,
NOT( Approved_by_Finance__c ) ,
text( Status )=&quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>This ticket is flagged as Financial Impact. Please get finance approval before closing/implementing the ticket.</errorMessage>
</ValidationRule>