unpackaged/main/default/objects/Case/validationRules/Ticket_Owner_must_be_assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Ticket_Owner_must_be_assigned</fullName>
    <active>false</active>
    <description>Only in the event of a Ticket being &quot;New&quot; can the owner be a queue. If status is not &quot;New&#39;, a ticket owner must be assigned.
DEACTIVATED US-0009322 - Enhance support queue</description>
    <errorConditionFormula>AND( LEFT(RecordTypeId,15) &lt;&gt;&quot;0123u0000019nl0&quot;,
OR
(
ISCHANGED(Status) &amp;&amp; NOT(ISPICKVAL( Status , &quot;New&quot;)) &amp;&amp; LEFT(OwnerId, 3) = &#39;00G&#39;,
ISNEW() &amp;&amp; NOT(ISPICKVAL( Status , &quot;New&quot;)),
false
))</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Owner is currently a Queue. Please assign this ticket to yourself before working on it.</errorMessage>
</ValidationRule>