unpackaged/main/default/objects/Case/listViews/Adv_Ticket_Manager_Cases.listView-meta.xml
<ListView>
    <fullName>Adv_Ticket_Manager_Cases</fullName>
    <columns>Ticket_Number__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Functional_Area__c</columns>
    <columns>Admin_Request_Type__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Summary__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Case.Feature_Request</value>
    </filters>
    <filters>
        <field>Admin_Request_Type__c</field>
        <operation>notEqual</operation>
        <value>Export Reports</value>
    </filters>
    <label>Adv Ticket Manager Cases</label>
    <language>en_US</language>
    <queue>Adv_Ticket_Manager</queue>
    <sharedTo>
        <group>Adv_Ticket_Manager</group>
        <group>Ticket_Manager</group>
    </sharedTo>
</ListView>