unpackaged/main/default/objects/Case/listViews/Advertising_Tickets.listView-meta.xml
<ListView>
    <fullName>Advertising_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Summary__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Support_Ticket</value>
    </filters>
    <filters>
        <field>Functional_Area__c</field>
        <operation>equals</operation>
        <value>Advertising</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>eBay Ads - Support Tickets</label>
</ListView>