unpackaged/main/default/objects/Case/listViews/All_Open_User_Requests.listView-meta.xml
<ListView>
    <fullName>All_Open_User_Requests</fullName>
    <columns>Ticket_Number__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Rejected</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.User_Reactivation,Case.User_Request_Form</value>
    </filters>
    <label>All Open User Requests</label>
    <language>en_US</language>
    <sharedTo>
        <group>Hive_Support</group>
    </sharedTo>
</ListView>