unpackaged/main/default/objects/Case/listViews/All_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Tickets</fullName>
    <columns>Summary__c</columns>
    <columns>Ticket_Number__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Tickets</label>
</ListView>