unpackaged/main/default/objects/Case/listViews/AllClosedCases.listView-meta.xml
<ListView>
    <fullName>AllClosedCases</fullName>
    <columns>Ticket_Number__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Summary__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Functional_Area__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Admin_Request,Case.Support_Ticket</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>lsoeung</value>
    </filters>
    <label>All Closed Tickets</label>
</ListView>