unpackaged/main/default/objects/Case/listViews/CREATED_TODAY.listView-meta.xml
<ListView>
    <fullName>CREATED_TODAY</fullName>
    <columns>Ticket_Number__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>equals</operation>
        <value>TODAY,YESTERDAY</value>
    </filters>
    <label>CREATED TODAY</label>
    <language>en_US</language>
    <sharedTo>
        <group>Hive_Support</group>
    </sharedTo>
</ListView>