unpackaged/main/default/objects/Case/listViews/Daily_Deals_BU_Case.listView-meta.xml
<ListView>
    <fullName>Daily_Deals_BU_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Daily Deals Team</label>
    <queue>Daily_Deals_BU</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>