unpackaged/main/default/objects/Case/listViews/Daily_Deals_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Daily_Deals_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Priority__c</columns>
    <columns>Deal_Statement__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ebay_NA_Daily_Deals</value>
    </filters>
    <label>Daily Deals Open Cases</label>
</ListView>