unpackaged/main/default/objects/Case/listViews/Feature_Requests.listView-meta.xml
<ListView>
    <fullName>Feature_Requests</fullName>
    <columns>Ticket_Number__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Summary__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Feature_Request</value>
    </filters>
    <label>Feature Requests</label>
</ListView>