unpackaged/main/default/objects/Case/listViews/My_created_tickets.listView-meta.xml
<ListView>
    <fullName>My_created_tickets</fullName>
    <booleanFilter>(1 or 3) and 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Summary__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Functional_Area__c</field>
        <operation>equals</operation>
        <value>Advertising</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Pending,In Progress,Handed to Jira,Waiting for Feedback,Added to Product Backlog,Deployed to Production,Open,Accepted,Escalated,Need More Information,On Hold</value>
    </filters>
    <filters>
        <field>HIVE_Products__c</field>
        <operation>equals</operation>
        <value>advertising</value>
    </filters>
    <label>Advertising Tickets</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Advertising</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>