unpackaged/main/default/objects/Case/listViews/Seller_Portal_Cases.listView-meta.xml
<ListView>
    <fullName>Seller_Portal_Cases</fullName>
    <columns>Ticket_Number__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Functional_Area__c</columns>
    <columns>Admin_Request_Type__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Summary__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Seller Portal Cases</label>
    <queue>Seller_Portal_Tickets_Manager</queue>
</ListView>