unpackaged/main/default/objects/Case/listViews/Seller_Portal_Tickets_Manager_Case.listView-meta.xml
<ListView>
    <fullName>Seller_Portal_Tickets_Manager_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Seller Portal Tickets Manager</label>
    <queue>Seller_Portal_Tickets_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>